src/test/ui/impl-trait/issues/issue-70971.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in variable binding
  --> $DIR/issue-70971.rs:2:14
   |
LL |     let x : (impl Copy,) = (true,);
   |              ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
